@@ -1,0 +1,8 @@
+#!/bin/sh
+lines=$(expr + $(diff $1 $2 | egrep '^[<>]' | \
+        egrep -v '/ID' | egrep -v '%PDF-' | wc -l))
+if [ "$lines" = "0" ]; then
+   echo okay
+else
+   diff -a -U 0 $1 $2
+fi
