@@ -1,8 +1,18 @@
 2012-07-15  Jay Berkenbilt  <ejb@ql.org>
 
+	* add new QPDF::isEncrypted method that returns some additional
+	information beyond other versions.
+
+	* libqpdf/QPDFWriter.cc: fix copyEncryptionParameters to fix the
+	minimum PDF version based on other file's encryption needs.  This
+	is a fix to code added on 2012-07-14 and did not impact previously
+	released code.
+
 	* libqpdf/QPDFWriter.cc (copyEncryptionParameters): Bug fix: qpdf
 	was not preserving whether or not AES encryption was being used
-	when copying encryption parameters.
+	when copying encryption parameters.  The file would still have
+	been properly encrypted, but a file that started off encrypted
+	with AES could have become encrypted with RC4.
 
 2012-07-14  Jay Berkenbilt  <ejb@ql.org>
 
